@@ -130,7 +130,7 @@ class Prereleaser(baserelease.Basereleaser):
             return
         contents = '\n'.join(self.data['history_lines'])
         history = self.data['history_file']
-        open(history, 'w').write(contents)
+        open(history, 'wb').write(contents)
         logger.info("History file %s updated.", history)
 
     def _diff_and_commit(self):
