@@ -170,7 +170,7 @@ If there's an empty history file, it gets a fresh header.
     >>> utils.answers_for_testing = ['1.0', '']
     >>> prerelease.main()
     Question: ...
-    >>> open('CHANGES.txt', 'w').write('')
+    >>> open('CHANGES.txt', 'wb').write('')
     >>> utils.answers_for_testing = ['', '']
     >>> postrelease.main()
     Current ...
@@ -199,7 +199,7 @@ created:
 
 Re-instate the history file again, but omit the restructuredtext header line:
 
-    >>> open('CHANGES.txt', 'w').write('1.0 (1972-12-25)\n\n- hello\n')
+    >>> open('CHANGES.txt', 'wb').write('1.0 (1972-12-25)\n\n- hello\n')
     >>> utils.answers_for_testing = ['1.3', '']
     >>> prerelease.main()
     Question: ...
