@@ -346,7 +346,7 @@ Prepare a mock documentation file:
     >>> mock_zestreleaser = os.path.join(tempdir, 'zest', 'releaser')
     >>> os.makedirs(mock_zestreleaser)
     >>> docfile = os.path.join(mock_zestreleaser, 'entrypoints.txt')
-    >>> open(docfile, 'w').write("""
+    >>> open(docfile, 'wb').write("""
     ... line1
     ... line2
     ... .. ### AUTOGENERATED FROM HERE ###
