@@ -84,7 +84,7 @@ products:
     >>> versiontxtproject = os.path.join(tempdir, 'vp')
     >>> os.mkdir(versiontxtproject)
     >>> os.chdir(versiontxtproject)
-    >>> open('version.txt', 'w').write('1.0 dev')
+    >>> open('version.txt', 'wb').write('1.0 dev')
 
 We need some version control marker (like an ``.svn`` dir):
 
@@ -112,7 +112,7 @@ version.txt and the setup.py must be left unmolested.
     >>> lines = [
     ...     "from setuptools import setup",
     ...     "setup(name='urgh', version=open('version.txt').read().strip())"]
-    >>> open('setup.py', 'w').write('\n'.join(lines))
+    >>> open('setup.py', 'wb').write('\n'.join(lines))
     >>> checkout.version = '1.2'
     >>> print open('version.txt').read()
     1.2
@@ -128,7 +128,7 @@ version.txt is the one left as-is.
     ...     "setup(name='urgh',",
     ...     "      version='1.3',",
     ...     "      )"]
-    >>> open('setup.py', 'w').write('\n'.join(lines))
+    >>> open('setup.py', 'wb').write('\n'.join(lines))
     >>> checkout.version = '1.4'
     >>> print open('version.txt').read() # Still at 1.2
     1.2
